# cuddly-umbrella

./: .env.example  .eslintrc.json  .gitignore  .npmrc  AI_PROPERTY_DOCTOR.md  DEVELOPMENT.md  LICENSE  README.md  SESSION_IMPROVEMENTS.md  docker-compose.yml  init-db.sql  package.json  pnpm-workspace.yaml  quick-start.sh  test-api.sh  turbo.json
apps/api/: .dockerignore  Dockerfile  pyproject.toml  requirements-ai.txt  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/config/: settings.py
apps/api/app/routers/: __init__.py  ai_insights.py  ai_property_doctor.py  analytics.py  gdpr.py  properties.py
apps/api/app/services/: __init__.py  ai_market_forecasting.py  ai_property_doctor.py  ai_property_vision.py  ai_valuation_engine.py  dpe_2026_calculator.py  french_gov_data_fetcher.py
apps/api/scripts/: generate_demo_images.py
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/ai-doctor/: page.tsx
apps/web/utils/: api-client.ts
