[tool.poetry]
name = "ecoimmo-france-api"
version = "2026.1.0"
description = "EcoImmo France 2026 - FastAPI Backend"
authors = ["EcoImmo France Team"]

[tool.poetry.dependencies]
python = "^3.13"

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
